--- a/bluebox/src/main/resources/log4j.properties
+++ b/bluebox/src/main/resources/log4j.properties
@@ -1,6 +1,6 @@
 # Root logger option
 log4j.rootLogger=INFO, stdout
- 
+log4j.logger.org.apache.solr=WARN
 # Direct log messages to stdout
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.Target=System.out
