--- a/bluebox/src/main/resources/mailDetails.properties
+++ b/bluebox/src/main/resources/mailDetails.properties
@@ -5,6 +5,7 @@ date=Date:
 html=Html
 text=Text
 raw=Raw
+headers=Headers
 security=Security
 scantitle=Security Scan Issues({0})
 scantitleunderline=--------------------
