--- a/bluebox/src/main/resources/bluebox.properties
+++ b/bluebox/src/main/resources/bluebox.properties
@@ -59,4 +59,4 @@ dojo_base=//ajax.googleapis.com/ajax/libs/dojo/1.10.4
 bluebox_theme=clean
 
 # links to online war file
-online_war=https://drive.google.com/folderview?id=0B_idaoMmuNnyYW9FS1paTEhuSXc&usp=sharing=sharing
+online_war=https://github.com/stephen-kruger/bluebox
