--- a/bluebox/src/main/resources/footer.properties
+++ b/bluebox/src/main/resources/footer.properties
@@ -1,4 +1,4 @@
 title=BlueBox
 copyright=&copy; All rights reserved by the author
 contact=To report issues, contact 
-contact_email=<a href="https://code.google.com/p/bluebox/">Project Home</a>
+contact_email=<a href="https://github.com/stephen-kruger/bluebox">Project Home</a>
