--- a/bluebox/src/main/resources/bluebox.properties
+++ b/bluebox/src/main/resources/bluebox.properties
@@ -5,7 +5,7 @@ bluebox_version=4.3.14
 bluebox_port=2500
 
 # Storage implementation
-#bluebox_storage=com.bluebox.smtp.storage.mongodb.StorageImpl
+#bluebox_storage=com.bluebox.smtp.storage.mongodb.MongoImpl
 #bluebox_storage=com.bluebox.smtp.storage.derby.StorageImpl
 bluebox_storage_home=${user.home}/bluebox
 bluebox_storage_config=repository-derby.xml
