--- a/bluebox/src/main/resources/info.properties
+++ b/bluebox/src/main/resources/info.properties
@@ -10,3 +10,4 @@ messagemaxsize=Maximum message size(MB)
 trashage=Hours to keep deleted messages
 reset=Reset black/white lists to defaults
 resetButton=Reset
+spoolcount=Mail spool count
