Fixed issue with trim not processing all the entires and stopping early.

--- a/bluebox/src/main/resources/admin.properties
+++ b/bluebox/src/main/resources/admin.properties
@@ -4,7 +4,8 @@ delete_all_action=Delete all emails
 purge_deleted=Purge all deleted mails
 purge_deleted_action=Purge all deleted mails
 clear_errors_action=Clear error logs
-prune_action=Expire and trim emails
+prune_action=Trim email count to below maximum allowed size
+expire_action=Delete expired emails
 set_global_action=Set global mailcount
 rebuild_search_action=Rebuild search indexes
 db_maintenance_action=Perform db maintenance
