--- a/bluebox/pom.xml
+++ b/bluebox/pom.xml
@@ -12,7 +12,7 @@
 		<lucene_version>5.2.1</lucene_version>
 		<solr_version>5.2.1</solr_version>
 		<derby_version>10.11.1.1</derby_version>
-		<mongo_version>3.0.2</mongo_version>
+		<mongo_version>3.0.3</mongo_version>
 		<tomcat.webapp.dir>/var/lib/tomcat6/webapps</tomcat.webapp.dir>
 		<tomcat.script.dir>/etc/init.d</tomcat.script.dir>
 		<rpm.file.owner>tomcat</rpm.file.owner>
@@ -216,7 +216,7 @@
 		<dependency>
 			<groupId>com.rometools</groupId>
 			<artifactId>rome</artifactId>
-			<version>1.5.0</version>
+			<version>1.5.1</version>
 		</dependency>
 		<dependency>
 			<groupId>commons-fileupload</groupId>
@@ -307,7 +307,7 @@
 		<dependency>
 			<groupId>javax.mail</groupId>
 			<artifactId>mail</artifactId>
-			<version>1.4.5</version>
+			<version>1.5.0-b01</version>
 		</dependency>
 	</dependencies>
 
