--- a/bluebox/pom.xml
+++ b/bluebox/pom.xml
@@ -4,15 +4,18 @@
 	<groupId>com.bluebox</groupId>
 	<artifactId>bluebox</artifactId>
 	<packaging>war</packaging>
-	<version>4.4.14</version>
+	<version>4.4.15</version>
 	<name>bluebox</name>
 	<url>https://code.google.com/p/bluebox/</url>
 	<properties>
 		<slf4j_version>1.7.12</slf4j_version>
-		<lucene_version>5.3.1</lucene_version>
-		<solr_version>5.3.1</solr_version>
+		<jsoup_version>1.9.1</jsoup_version>
+		<commons_io_version>2.5</commons_io_version>
+		<rome_version>1.6.0</rome_version>
+		<lucene_version>6.0.0</lucene_version>
+		<solr_version>6.0.0</solr_version>
 		<derby_version>10.12.1.1</derby_version>
-		<mongo_version>3.1.0</mongo_version>
+		<mongo_version>3.2.2</mongo_version>
 		<tomcat.webapp.dir>/var/lib/tomcat6/webapps</tomcat.webapp.dir>
 		<tomcat.script.dir>/etc/init.d</tomcat.script.dir>
 		<rpm.file.owner>tomcat</rpm.file.owner>
@@ -216,7 +219,7 @@
 		<dependency>
 			<groupId>com.rometools</groupId>
 			<artifactId>rome</artifactId>
-			<version>1.5.1</version>
+			<version>${rome_version}</version>
 		</dependency>
 		<dependency>
 			<groupId>commons-fileupload</groupId>
@@ -287,7 +290,7 @@
 		<dependency>
 			<groupId>org.jsoup</groupId>
 			<artifactId>jsoup</artifactId>
-			<version>1.8.3</version>
+			<version>${jsoup_version}</version>
 		</dependency>
 		<dependency>
 			<groupId>commons-lang</groupId>
@@ -297,7 +300,7 @@
 		<dependency>
 			<groupId>commons-io</groupId>
 			<artifactId>commons-io</artifactId>
-			<version>2.4</version>
+			<version>${commons_io_version}</version>
 		</dependency>
 		<dependency>
 			<groupId>javax.activation</groupId>
