--- a/bluebox/pom.xml
+++ b/bluebox/pom.xml
@@ -6,16 +6,18 @@
 	<packaging>war</packaging>
 	<version>4.4.15</version>
 	<name>bluebox</name>
-	<url>https://code.google.com/p/bluebox/</url>
+	<url>https://github.com/stephen-kruger/bluebox</url>
 	<properties>
-		<slf4j_version>1.7.12</slf4j_version>
-		<jsoup_version>1.9.1</jsoup_version>
+		<slf4j_version>1.7.21</slf4j_version>
+		<jsoup_version>1.9.2</jsoup_version>
 		<commons_io_version>2.5</commons_io_version>
 		<rome_version>1.6.0</rome_version>
 		<lucene_version>6.0.0</lucene_version>
 		<solr_version>6.0.0</solr_version>
 		<derby_version>10.12.1.1</derby_version>
 		<mongo_version>3.2.2</mongo_version>
+		<apache.wink>1.4</apache.wink>
+		<jetty_version>9.3.9.v20160517</jetty_version>
 		<tomcat.webapp.dir>/var/lib/tomcat6/webapps</tomcat.webapp.dir>
 		<tomcat.script.dir>/etc/init.d</tomcat.script.dir>
 		<rpm.file.owner>tomcat</rpm.file.owner>
@@ -236,10 +238,11 @@
 			<artifactId>commons-configuration</artifactId>
 			<version>1.10</version>
 		</dependency>
+
 		<dependency>
-			<groupId>org.mortbay.jetty</groupId>
-			<artifactId>jetty-servlet-tester</artifactId>
-			<version>6.1.26</version>
+			<groupId>org.eclipse.jetty</groupId>
+			<artifactId>jetty-servlet</artifactId>
+			<version>${jetty_version}</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
@@ -248,14 +251,6 @@
 			<version>2.3.4</version>
 			<scope>test</scope>
 		</dependency>
-		<dependency>
-			<groupId>javax.servlet</groupId>
-			<artifactId>javax.servlet-api</artifactId>
-			<version>3.1.0</version>
-			<scope>provided</scope>
-		</dependency>
-		<!-- <dependency> <groupId>javax.servlet.jsp</groupId> <artifactId>jsp-api</artifactId> 
-			<version>2.1</version> <scope>provided</scope> </dependency> -->
 		<dependency>
 			<groupId>org.mongodb</groupId>
 			<artifactId>mongo-java-driver</artifactId>
@@ -276,12 +271,6 @@
 			<artifactId>antisamy</artifactId>
 			<version>1.5.3</version>
 		</dependency>
-		<dependency>
-			<groupId>commons-codec</groupId>
-			<artifactId>commons-codec</artifactId>
-			<version>1.10</version>
-		</dependency>
-
 		<dependency>
 			<groupId>org.jsoup</groupId>
 			<artifactId>jsoup</artifactId>
@@ -319,7 +308,7 @@
 			<version>2.0.1</version>
 			<scope>provided</scope>
 		</dependency>
-				<dependency>
+		<dependency>
 			<groupId>javax.servlet</groupId>
 			<artifactId>javax.servlet-api</artifactId>
 			<version>3.1.0</version>
@@ -336,6 +325,37 @@
 			<artifactId>commons-codec</artifactId>
 			<version>1.10</version>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.wink</groupId>
+			<artifactId>wink-client</artifactId>
+			<version>${apache.wink}</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.wink</groupId>
+			<artifactId>wink-server</artifactId>
+			<version>${apache.wink}</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.wink</groupId>
+			<artifactId>wink-common</artifactId>
+			<version>${apache.wink}</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.wink</groupId>
+			<artifactId>wink-json-provider</artifactId>
+			<version>${apache.wink}</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.wink</groupId>
+			<artifactId>wink-component-test-support</artifactId>
+			<version>${apache.wink}</version>
+			<scope>test</scope>
+		</dependency>
+
 	</dependencies>
 
 	<scm>
