--- a/bluebox/pom.xml
+++ b/bluebox/pom.xml
@@ -89,6 +89,7 @@
 					<artifactId>maven-war-plugin</artifactId>
 					<version>2.4</version>
 					<configuration>
+						<failOnMissingWebXml>false</failOnMissingWebXml>
 						<webResources>
 							<resource>
 								<filtering>true</filtering>
