--- a/bluebox/scripts/server.xml.sample
+++ b/bluebox/scripts/server.xml.sample
@@ -3,7 +3,16 @@
 
     <!-- Enable features -->
     <featureManager>
-        <feature>javaee-7.0</feature>
+        <feature>webProfile-7.0</feature>
+        <feature>localConnector-1.0</feature>
+        <feature>ssl-1.0</feature>
+        <feature>jaxrs-2.0</feature>
+        <feature>jaxws-2.2</feature>
+        <feature>jsp-2.3</feature>
+        <feature>servlet-3.1</feature>
+        <feature>jaxrsClient-2.0</feature>
+        <feature>wsSecurity-1.1</feature>
+        <feature>appSecurity-2.0</feature>
     </featureManager>
 
     	<basicRegistry id="defaultRegistry">
