--- a/bluebox/src/main/resources/bluebox.properties
+++ b/bluebox/src/main/resources/bluebox.properties
@@ -1,5 +1,8 @@
 # Bluebox version
-bluebox_version=4.5.1
+bluebox_version=4.5.3
+
+bluebox.home_custom_properties=${sys:user.home}${sys:file.separator}bluebox.properties
+bluebox.env_custom_properties=${env:BLUEBOX_CONFIG}
 
 # SMTP server port
 bluebox_port=2500
