Add config support

--- a/bluebox/src/main/resources/bluebox.properties
+++ b/bluebox/src/main/resources/bluebox.properties
@@ -1,8 +1,7 @@
 # Bluebox version
 bluebox_version=4.5.3
 
-bluebox.home_custom_properties=${sys:user.home}${sys:file.separator}bluebox.properties
-bluebox.env_custom_properties=${env:BLUEBOX_CONFIG}
+bluebox.custom_properties=${sys:server.config.dir}/bluebox
 
 # SMTP server port
 bluebox_port=2500
