Change to EU centre

--- a/src/main/docker/Dockerfile
+++ b/src/main/docker/Dockerfile
@@ -1,4 +1,4 @@
-FROM registry.ng.bluemix.net/ibmliberty
+FROM registry.eu-gb.bluemix.net/ibmliberty
 COPY server.xml /opt/ibm/wlp/usr/servers/defaultServer/
 ADD bluebox.war /opt/ibm/wlp/usr/servers/defaultServer/dropins/
 ENV LICENSE accept
